add SQLite with SQLAlchemy and Marshmallow serialisations
